sfdx-source/force-app/main/default/objects/Process_Flow_Request_Chunk__c/Process_Flow_Request_Chunk__c.object-meta.xml
<CustomObject>
   <description>LEM-10720: Temporal Storage solution to support scalability with Process Flow Request operations. Data can be temporarily stored in chunks associated with a specific Process Flow Request, enabling the handling of large datasets without exceeding governor limits. This object serves as an intermediary storage to hold serialized data, ensuring that large operations can be processed in a staged manner. Each record represents a portion of the data being processed, linked directly to the parent Process Flow Request. This approach facilitates more efficient resource utilization and helps maintain system performance, even when dealing with extensive data manipulation tasks, such as Bulk Onboarding Stores.</description>
   <label>Process Flow Request Chunk</label>
   <nameField>
      <displayFormat>PFRC-{0000000000}</displayFormat>
      <label>Process Flow Request Chunk Name</label>
      <type>AutoNumber</type>
   </nameField>
   <pluralLabel>Process Flow Request Chunks</pluralLabel>
   <sharingModel>ReadWrite</sharingModel>
</CustomObject>