sfdx-source/force-app/main/default/objects/Process_Flow_Request_Chunk__c/fields/Chunk_Number__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Number__c</fullName>
    <description>This field holds the numeric sequence of the data chunk, indicating its order in the series of chunks associated with a specific Process Flow Request. It is used to ensure that data chunks are processed and reassembled in the correct order, maintaining data integrity and consistency throughout the operation.</description>
    <label>Chunk Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>