sfdx-source/force-app/main/default/objects/Process_Flow_Request_Chunk__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Stores errors that occur throughout the data operation.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>