sfdx-source/force-app/main/default/objects/Process_Flow_Request_Chunk__c/fields/Process_Flow_Request__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-10720: Reference to related Process Flow Request, which represents the overall state of the operation.</description>
    <label>Process Flow Request</label>
    <referenceTo>Process_Flow_Request__c</referenceTo>
    <relationshipLabel>Process Flow Request Chunks</relationshipLabel>
    <relationshipName>Process_Flow_Request_Chunks</relationshipName>
    <type>Lookup</type>
</CustomField>