sfdx-source/force-app/main/default/objects/Process_Flow_Request_Chunk__c/fields/Serialized_Data__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Data__c</fullName>
    <description>This field stores serialized data chunks related to the Process Flow Request. The data is stored in a serialized format, typically JSON, to maintain the structure and integrity of the data during the processing phases. Each record of the Process_Flow_Request_Chunk__c object represents a portion of the overall data being processed, allowing for scalable and efficient handling of large datasets.</description>
    <label>Serialized Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>